--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,24 @@
--r scientific-python-lectures/requirements.txt
+numpy==2.1.3
+git+https://github.com/tkoyama010/scipy/tree/rtd-pooch
+matplotlib==3.9.3
+pandas==2.2.3
+patsy==1.0.1
+pyarrow==18.1.0
+scikit-learn==1.5.2
+scikit-image==0.24.0
+sympy==1.13.3
+statsmodels==0.14.4
+seaborn==0.13.2
+pytest>=8.3
+sphinx>=8.0
+sphinx-gallery>=0.17
+sphinx-copybutton
+coverage>=7.6
+Pillow
+pooch
+ipython
+pickleshare
+pre-commit==4.0.1
+requests
+sphinxcontrib-jquery
 sphinx-intl[transifex]==2.2.0
