--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 coverage>=7.6
-git+https://github.com/tkoyama010/scipy.git@rtd-pooch
 ipython
 matplotlib==3.9.3
 numpy==2.1.3
@@ -14,6 +13,7 @@ pytest>=8.3
 requests
 scikit-image==0.24.0
 scikit-learn==1.5.2
+scipy==1.14.1
 seaborn==0.13.2
 sphinx>=8.0
 sphinx-copybutton
