--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,2 @@
-coverage>=7.6
-ipython
-matplotlib==3.9.3
-numpy==2.1.3
-pandas==2.2.3
-patsy==1.0.1
-pickleshare
-Pillow
-pooch
-pre-commit==4.0.1
-pyarrow==18.1.0
-pytest>=8.3
-requests
-scikit-image==0.24.0
-scikit-learn==1.5.2
-scipy==1.15.2
-seaborn==0.13.2
-sphinx>=8.0
-sphinx-copybutton
-sphinx-gallery>=0.17
+-r scientific-python-lectures/requirements.txt
 sphinx-intl[transifex]==2.3.1
-sphinxcontrib-jquery
-statsmodels==0.14.4
-sympy==1.13.3
