--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           submodules: true
           token: ${{ secrets.PERSONAL_ACCESSTOKEN }}
       - name: Setup SSH
-        uses: MrSquaare/ssh-setup-action@v3
+        uses: MrSquaare/ssh-setup-action@017f4d9537e3aa1ea64e34700b645ac0bb76b7ec
         with:
           host: github.com
           private-key: ${{ secrets.SSH_PRIVATE_KEY }}
