--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,11 +44,13 @@ jobs:
       - name: install transifex cli
         run: |
           (cd scientific-python-lectures; git fetch origin; git checkout main; git reset --hard origin/main; git branch -a)
-          curl -o- https://raw.githubusercontent.com/transifex/cli/master/install.sh | bash
-          mv tx /usr/local/bin/tx
       - uses: py-actions/py-dependency-install@30aa0023464ed4b5b116bd9fbdab87acf01a484e
         with:
           path: requirements.txt
+      - name: install transifex cli
+        run: |
+          curl -o- https://raw.githubusercontent.com/transifex/cli/master/install.sh | bash
+          mv tx /usr/local/bin/tx
       - name: update
         env:
           SPHINXINTL_TRANSIFEX_ORGANIZATION_NAME: tkoyama010
