--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ scikit-image==0.25.2
 scikit-learn==1.6.1
 scipy==1.15.2
 seaborn==0.13.2
-sphinx==7.1.2
+sphinx>=8.2
 sphinx-copybutton
 sphinx-gallery>=0.19
 
