Add dataset pre-download for Read the Docs builds
- Create download_datasets.py to cache scikit-learn datasets
- Update .readthedocs.yaml to run dataset download in post_install
- Set SCIKIT_LEARN_DATA environment variable to use cached data
- Override User-Agent to avoid HTTP 403 errors
- Fixes sphinx-gallery failures for plot_california_prediction.py,
  plot_measuring_performance.py, and plot_eigenfaces.py

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,6 +10,13 @@ build:
   jobs:
     post_create_environment:
       - cp -a locales scientific-python-lectures/
+    post_install:
+      # Download scikit-learn datasets before sphinx-gallery runs
+      - python download_datasets.py
+  commands:
+    # Set environment variable for scikit-learn to use cached data
+    - export SCIKIT_LEARN_DATA=$PWD/scikit_learn_data
+    - python -m sphinx -T -b html -d _build/doctrees -D language=ja scientific-python-lectures $READTHEDOCS_OUTPUT/html
 
 submodules:
   include:
