Fix ReadTheDocs config: remove conflicting build.jobs and build.commands

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,13 +7,11 @@ build:
   apt_packages:
     - gfortran
     - libopenblas-dev
-  jobs:
-    post_create_environment:
-      - cp -a locales scientific-python-lectures/
-    post_install:
-      # Download scikit-learn datasets before sphinx-gallery runs
-      - python download_datasets.py
   commands:
+    - pip install -r requirements.txt
+    - cp -a locales scientific-python-lectures/
+    # Download scikit-learn datasets before sphinx-gallery runs
+    - python download_datasets.py
     # Set environment variable for scikit-learn to use cached data
     - export SCIKIT_LEARN_DATA=$PWD/scikit_learn_data
     - python -m sphinx -T -b html -d _build/doctrees -D language=ja scientific-python-lectures $READTHEDOCS_OUTPUT/html
@@ -25,7 +23,3 @@ submodules:
 
 sphinx:
   configuration: scientific-python-lectures/conf.py
-
-python:
-  install:
-    - requirements: requirements.txt
